@@ -21,6 +21,7 @@
  */
 package org.bitrepository.integrityservice.workflow.step;
 
+import org.bitrepository.TestGroups;
 import org.bitrepository.bitrepositoryelements.ChecksumDataForFileTYPE;
 import org.bitrepository.client.eventhandler.CompleteEvent;
 import org.bitrepository.client.eventhandler.EventHandler;
@@ -31,6 +32,7 @@ import org.junit.jupiter.api.Test;
 import org.mockito.invocation.InvocationOnMock;
 import org.mockito.stubbing.Answer;
 
+import java.net.URI;
 import java.net.URL;
 
 import static org.bitrepository.common.utils.AllureTestUtils.addDescription;
@@ -49,7 +51,7 @@ public class PutFileStepTest extends WorkflowstepTest {
     public static final String TEST_CHECKSUM = "1234567890abba0987654321";
 
     @Test
-    @Tag("regressiontest")
+    @Tag(TestGroups.REGRESSIONTEST)
     void testPositiveReply() throws Exception {
         addDescription("Test the step for getting the file can handle COMPLETE operation event.");
         doAnswer(new Answer() {
@@ -63,7 +65,7 @@ public class PutFileStepTest extends WorkflowstepTest {
                 any(EventHandler.class), anyString());
 
         IntegrityWorkflowContext context = new IntegrityWorkflowContext(settings, collector, model, alerter, auditManager);
-        URL uploadUrl = new URL("http://localhost/dav/test.txt");
+        URL uploadUrl = new URI("http://localhost/dav/test.txt").toURL();
         PutFileStep step = new PutFileStep(context, TEST_COLLECTION, TEST_FILE_1, uploadUrl, TEST_CHECKSUM);
 
         step.performStep();
@@ -75,7 +77,7 @@ public class PutFileStepTest extends WorkflowstepTest {
     }
 
     @Test
-    @Tag("regressiontest")
+    @Tag(TestGroups.REGRESSIONTEST)
     void testNegativeReply() throws Exception {
         assertThrows(IllegalStateException.class, () -> {
 
@@ -91,7 +93,7 @@ public class PutFileStepTest extends WorkflowstepTest {
                     any(EventHandler.class), anyString());
 
             IntegrityWorkflowContext context = new IntegrityWorkflowContext(settings, collector, model, alerter, auditManager);
-            URL uploadUrl = new URL("http://localhost/dav/test.txt");
+            URL uploadUrl = new URI("http://localhost/dav/test.txt").toURL();
             PutFileStep step = new PutFileStep(context, TEST_COLLECTION, TEST_FILE_1, uploadUrl, TEST_CHECKSUM);
 
             step.performStep();
