@@ -24,7 +24,7 @@
  */
 package org.bitrepository.pillar.messagehandler;
 
-import org.apache.activemq.util.ByteArrayInputStream;
+import jakarta.xml.bind.JAXBException;
 import org.bitrepository.bitrepositorydata.GetChecksumsResults;
 import org.bitrepository.bitrepositoryelements.ChecksumDataForChecksumSpecTYPE;
 import org.bitrepository.bitrepositoryelements.ResponseCode;
@@ -49,14 +49,16 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.xml.sax.SAXException;
 
-import javax.xml.bind.JAXBException;
 import java.io.BufferedInputStream;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
@@ -239,8 +241,8 @@ public class GetChecksumsRequestHandler extends PerformRequestHandler<GetChecksu
      * @param url          The location where the file should be uploaded.
      * @throws IOException If something goes wrong.
      */
-    private void uploadFile(File fileToUpload, String url) throws IOException {
-        URL uploadUrl = new URL(url);
+    private void uploadFile(File fileToUpload, String url) throws IOException, URISyntaxException {
+        final URL uploadUrl = new URI(url).toURL();
 
         // Upload the file.
         log.debug("Uploading file '{}' to {}", fileToUpload.getName(), url);
